# Aggregator

./: .editorconfig  Cargo.toml  build.gradle.kts  gradlew  settings.gradle.kts
.github/: README.md  renovate.json
.github/workflows/: build.yml  cargo.yml
gradle/: libs.versions.toml
src/: main.rs  misc.rs
src/main/java/gay/ampflower/substitutions/: MixinMisc.java  MixinSSLContextImpl.java
src/main/java/gay/ampflower/substitutions/jackson/: MixinCoreXMLDeserializers.java  MixinCoreXMLSerializers.java  MixinDOMDeserializer.java  MixinDOMSerializer.java  MixinOptionalHandlerFactory.java
src/main/java/gay/ampflower/substitutions/logback/: MixinContextInitializer.java  MixinLoggerContext.java  MixinReconfigureOnChangeTask.java
src/main/java/gay/ampflower/substitutions/slf4j/: MixinLoggerFactory.java
src/main/kotlin/dev/astralchroma/aggregator/: Aggregator.kt  CommandClass.kt  Extensions.kt
src/main/kotlin/dev/astralchroma/aggregator/annotations/: Annotations.kt
src/main/kotlin/dev/astralchroma/aggregator/commands/: DataCommand.kt  HelpCommand.kt  RedirectCommand.kt  UptimeCommand.kt
src/main/kotlin/dev/astralchroma/aggregator/data/: Data.kt
src/main/kotlin/dev/astralchroma/aggregator/database/: TargetConfiguration.kt
src/main/kotlin/io/github/petercrawley/aggregator/: Aggregator.kt  CommandClass.kt  Extensions.kt
src/main/kotlin/io/github/petercrawley/aggregator/annotations/: Annotations.kt
src/main/kotlin/io/github/petercrawley/aggregator/commands/: DataCommand.kt  HelpCommand.kt  RedirectCommand.kt  UptimeCommand.kt
(+2 files in other folders)
