[package]
name = "aggregator"
authors = [ "Astralchroma" ]
description = "A simple bot designed to relay crossposted announcement messages to circumvent Discord's 15 integration per chennl limitation."
repository = "https://github.com/Astralchroma/Aggregator"

version = "2.0.0"
edition = "2021"

license = "AGPL-3.0-or-later"

[dependencies]
poise = "=0.5.6"
thiserror = "=1.0.49"
tokio = { version = "=1.33.0", features = [ "full" ] }
